<resources>
    <string name="app_name">PracticaFinal</string>
    <string name="home_tab">Inicio</string>
    <string name="novedades_tab">Novedades</string>
    <string name="ofertas_tab">Ofertas</string>
    <string name="ps4_tab">PS4</string>
    <string name="xbox_tab">Xbox</string>
    <string name="supportTitle_tab">Soporte</string>
    <string name="location_tab">¿Dónde estamos?</string>
    <string name="contact_tab">Contact</string>
    <string name="carrito_tab">Carrito</string>
    <string name="app_web">www.tiendavideojuegos.com</string>


    <string-array name="ps4games">
        <item>NinoKuni II</item>
        <item>Shenmue</item>
        <item>Outcast</item>
    </string-array>
    <string-array name="xboxgames">
        <item>Halo</item>
        <item>Forza 4</item>
        <item>Sonic Mania</item>
    </string-array>
    <string-array name="ofertas">
        <item>God Of War</item>
        <item>Forza 3</item>
        <item>Spyro</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>