<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@mipmap/ic_home_foreground"
            android:title="@string/home_tab"
            android:checked="true"/>
        <item
            android:id="@+id/navigation_novedades"
            android:icon="@mipmap/ic_news_foreground"
            android:title="@string/novedades_tab"
            />
        <item
            android:id="@+id/navigation_ofertas"
            android:icon="@mipmap/ic_offer_foreground"
            android:title="@string/ofertas_tab"
            />
        <item
            android:id="@+id/navigation_ps4"
            android:icon="@mipmap/ic_play_station_foreground"
            android:title="@string/ps4_tab"
            />
        <item
            android:id="@+id/navigation_xbox"
            android:icon="@mipmap/ic_xbox_foreground"
            android:title="@string/xbox_tab"
            />
        <item
            android:id="@+id/navigation_carrito"
            android:icon="@mipmap/ic_marketcart_foreground"
            android:title="@string/carrito_tab"
            />

    </group>
    <item android:title="@string/supportTitle_tab">
        <menu>
            <item
                android:id="@+id/navigation_location"
                android:icon="@mipmap/ic_location_foreground"
                android:title="@string/location_tab"
                />
            <item
                android:id="@+id/navigation_contact"
                android:icon="@mipmap/ic_send_email3_foreground"
                android:title="@string/contact_tab"
                />
        </menu>
    </item>
</menu>